--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-trigger": "^0.6.14",
+    "react-simple-marquee": "^1.3.2",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.5",
